@@ -80,6 +80,7 @@ Included
 - Release bundle sidecar set now includes `RELEASE_HISTORY.md`.
 - Root release packaging script (`weftend_release_zip.ps1`) now enforces `Set-StrictMode -Version Latest`.
 - Release sidecar doc copies (`RELEASE_NOTES`, release announcement, quickstart, checklist, history, changelog) now use per-file stage/finalize in `weftend_release_zip.ps1` (`<name>.stage -> <name>`).
+- Release zip and `.sha256` outputs now also stage/finalize in `weftend_release_zip.ps1` (`.zip.stage` / `.sha256.stage` -> final) to reduce partial-release artifact exposure.
 - `verify:360` docs-sync/etiquette coverage now includes `CHANGELOG.md`, release notes, release announcement, and release history references.
 - `docs/GIT_POSTING_ETIQUETTE.md` now matches verify etiquette target set (includes `CHANGELOG.md` and `docs/RELEASE_HISTORY.md`).
 - 360 commit gate added:
